--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="col-lg-6">
                   <ul>
                     <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Qadis Pervaiz</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>qadisp</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://jojo-exe.github.io/BootStrap/</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+92 3134131439</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Rawalpindi,Islamabad</span></li>
                   </ul>
@@ -183,8 +183,8 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <h4 class="title"><a href="">Custom PC Configuration</a></h4>
+              <p class="description">PC builders offer the service of helping customers configure their own custom-built PCs. They provide expertise and guidance in selecting the right components, such as processors, motherboards, graphics cards, RAM, storage drives, and power supplies, based on the customer's specific requirements and budget. They ensure compatibility and optimize the configuration for the desired performance</p>
             </div>
           </div>
 
